# boredgames

./: Cargo.toml  makefile
src/: client.rs  communication.rs  database.rs  main.rs  server.rs  state.rs  utils.rs
src/imaglib/: draw.rs  gui.rs  math.rs  mod.rs  obj.rs
