[package]
name = "boredgames"
version = "0.1.0"
edition = "2024"
authors = ["Bridget Hartin Pasco isaacpasco@icloud.com"]

[dependencies]
eframe = {version = "0.32.3", features = ["serde"]}
egui_extras = {version = "0.32.3", features = ["all_loaders", "serde"]}
image = { version ="0.25.9", features = ["png", "jpeg", "serde"]}
local-ip-address = "0.6.8"
serde = {version = "1.0.228" ,features = ["derive"]}
serde_json = "1.0.147"


[target.x86_64-pc-windows-msvc]
#linker = "x86_64-w64-mingw32-gcc"
rustflags = ["-C", "target-feature=+crt-static","-I/usr/local/include/"]

