[package]
name = "boredgames"
version = "0.1.0"
edition = "2024"
authors = ["Bridget Hartin Pasco isaacpasco@icloud.com"]

[dependencies]
eframe = {version = "0.32.3", features = ["serde"]}
egui_extras = {version = "0.32.3", features = ["all_loaders", "serde"]}
image = { version ="0.25.9", features = ["png", "jpeg", "serde"]}
local-ip-address = "0.6.8"
serde = {version = "1.0.228" ,features = ["derive"]}
serde_json = "1.0.147"

[package.metadata.bundle]
identifier = "com.mcgillicuddy7.boredgames"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
cflags = ["link-args=-static"]
